gateway-PoC/migration/i2gw/gateway/canary.out.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.1.0
  name: nginx
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: canary.example.com
    name: canary-example-com-http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.1.0
  name: canary-canary-example-com
  namespace: default
spec:
  hostnames:
  - canary.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-canary
      port: 80
      weight: 20
    - name: echo
      port: 80
      weight: 80
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: []
