gateway-PoC/migration/i2gw/gateway/header-routing.out.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.1.0
  name: nginx
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: header-routing.example.com
    name: header-routing-example-com-http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.1.0
  name: header-routing-header-routing-example-com
  namespace: default
spec:
  hostnames:
  - header-routing.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
  - backendRefs:
    - name: echo-canary
      port: 80
    matches:
    - headers:
      - name: X-Canary
        value: always
      path:
        type: PathPrefix
        value: /
  - backendRefs:
    - name: echo
      port: 80
    matches:
    - headers:
      - name: X-Canary
        value: never
      path:
        type: PathPrefix
        value: /
status:
  parents: []
