gateway-PoC/migration/i2gw/gateway/https-redirect.out.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.1.0
  name: nginx
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: https-redirect.example.com
    name: https-redirect-example-com-http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.1.0
  name: https-redirect-https-redirect-example-com
  namespace: default
spec:
  hostnames:
  - https-redirect.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: []
