gateway-PoC/migration/i2gw/gateway/regex.out.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.1.0
  name: nginx
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: regex.example.com
    name: regex-example-com-http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.1.0
  name: regex-regex-example-com
  namespace: default
spec:
  hostnames:
  - regex.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo
      port: 80
    matches:
    - path:
        type: RegularExpression
        value: (?i)/api/v[0-9]+.*
status:
  parents: []
