gateway-PoC/migration/i2gw/gateway/tls-passthrough.out.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.1.0
  name: nginx
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: tls-passthrough.example.com
    name: tls-passthrough-example-com-http
    port: 80
    protocol: HTTP
  - hostname: tls-passthrough.example.com
    name: tls-passthrough-example-com-https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: tls-passthrough-tls
  - hostname: tls-passthrough.example.com
    name: tls-passthrough-example-com-tls-passthrough
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.1.0
  name: tls-passthrough-tls-passthrough-example-com-tls-passthrough
  namespace: default
spec:
  hostnames:
  - tls-passthrough.example.com
  parentRefs:
  - name: nginx
    sectionName: tls-passthrough-example-com-tls-passthrough
  rules:
  - backendRefs:
    - name: echo
      port: 80
status:
  parents: []
